  * Fix bug #911696: Add manufacturer code ACI "Asus Computer Inc"
2.0.4.0
  * Fix bogus CPU name with lastest CPU, which may not show number of cores and architecture
  * Bug #920044 fixed by same fix as bug #901270
  * Bug #904162 fixed by same fix as bug #901270
  * Bug #909161 fixed by same fix as bug #901270
2.0.3.1
  * Fix bug #911696: Add manufacturer code HSD "Hannspree Inc" and STN "Samtron"
  * Fix bug #765893: Slow memory leak. Include ElNounch patch for DMI slow memory leak. Many Thanks ElNounch
  * Fix bug #901270: Exit code 259. Rewrite wait for process ending function, in way like ElNounch proposed. Many Thanks ElNounch
2.0.3, aka 2.0.3.0 
  * Fix bug #765893: Use TinyXML 2.6.2 or newer, to prevent memory leak issue when using VBS plugin => agent ran into an infinite loop (refer http://sourceforge.net/tracker/index.php?func=detail&aid=3217501&group_id=13559&atid=313559) 
  * Optimize ExecCommand code, to reduce Handle usage 
  * Fix bug #860551 Migration process from old agent 4000 series fails when eventlog are in use, because ocsservice.dll is not deleted until the next reboot
  * When agent encounter error dowloading metadata, remove package directory to avoid error message into download tool
  * Fix bug when deploying multiple package with user notification in the same download session
  * Fix bug in NOTIFY mode, where data must be inserted into <CONTENT> XML node
  * Fix Bug #860466: Fix incorrect permission propagation on $AppData\OCS Inventory NG\Agent in some cases
2.0.2, aka 2.0.2.0
  * Fix Bug #872768: Crash in Registry.cpp - "Run-Time Check Failure #2 - Stack around the variable 'lpstrData' was corrupted."
  * Ensure all array and objects are correctly freed
  * Fix Bug #859574: Switch to WMI to retreive Bios infos even if DMI access is successfull, but serial or model is not valid
  * Fix Bug #435068: Do not register multiple time a monitor with the same serial